--- a/html/websock.html
+++ b/html/websock.html
@@ -7,11 +7,13 @@ const ws = new WebSocket(
 );
 
 ws.onopen = (event) => {
-        
+        console.log("OPEN");        
 };
 
 ws.onmessage = (event) => {
+        console.log("MESSAGE");     
         console.log(event.data);
+        ws.send(event.data);
 };
 
 </script></html>
